--- a/classes/blocks/tp-creative-image/style.css
+++ b/classes/blocks/tp-creative-image/style.css
@@ -22,7 +22,8 @@
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
     -o-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out
+    transition: all .3s ease-in-out;
+	will-change: transform;
 }
 .tpgb-creative-img-wrap {
     font-size: 0;
