--- a/classes/blocks/tp-button/style.css
+++ b/classes/blocks/tp-button/style.css
@@ -5,6 +5,7 @@
     position: relative;
     display: block;
     width: 100%;
+	font-size: 0;
 }
 .tpgb-plus-button .animted-content-inner {
 	position: relative;
