--- a/classes/blocks/tp-infobox/style.css
+++ b/classes/blocks/tp-infobox/style.css
@@ -71,8 +71,10 @@
 .tpgb-infobox .vertical-center {
     align-items: center;
 }
-
-.tpgb-infobox .info-box-inner .service-icon {
+.tpgb-draw-svg object {
+    opacity: 0;
+}
+.tpgb-infobox .info-box-inner .service-icon, .tpgb-infobox .info-box-inner .tpgb-draw-svg {
 	color: #000;
     width: 50px;
     height: 50px;
@@ -87,6 +89,11 @@
     -o-transition: all 0.3s linear;
     -ms-transition: all 0.3s linear;
     transition: all 0.3s linear;
+}
+.tpgb-infobox .info-box-inner .tpgb-draw-svg{
+    width: 100%;
+    max-width: 50px;
+    line-height: 50px;
 }
 .tpgb-infobox .info-box-inner .icon-square {
     border: 1px solid;
